Fixed images being too big

--- a/u-talent_stylesheet.css
+++ b/u-talent_stylesheet.css
@@ -30,6 +30,6 @@ div.scroll-container {
 div.scroll-container img {
     margin: 10px;
     border-radius: 12px;
-    max-width: 500px;
-    max-height: 800px;
+    width: 500px;
+    height: 800px;
 }
